# Dumrarria

./: CMakeLists.txt
assets/: PlayerStatic.aseprite
src/: AppContext.h  Camera.cpp  Camera.h  Enemy.cpp  Enemy.h  EngineUpdates.cpp  EntityClass.cpp  EntityClass.h  InputHandler.cpp  InputHandler.h  RenderEntities.cpp  RenderEntities.h  TextureManager.cpp  TextureManager.h  UserInterface.cpp  UserInterface.h  game.cpp  game.h  globalDataStructs.h  main.cpp  player.cpp  player.h  playerClass.cpp  playerClass.h
